--- a/1_Bing_api_picture_collecting.ipynb
+++ b/1_Bing_api_picture_collecting.ipynb
@@ -69,7 +69,7 @@
     "# Bing Search API URL\n",
     "ROOT_URL = 'https://api.cognitive.microsoft.com/bing/v5.0/images/search'\n",
     "# API\n",
-    "API_KEY = '044b6a263d464b29b42c9f9e2c76f6d4'\n",
+    "API_KEY = 'api code'\n",
     "#Country\n",
     "MKT = 'ja-JP'\n",
     "# 画像のダウンロードのタイムアウト(秒)\n",
